[package]
name = "blog"
version = "0.1.0"
authors = ["xiaoyu <xiaoyu@guanghe.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres = {version = "0.17.5", features = ["with-chrono-0_4"]}
chrono = { version = "0.4", features = ["serde"] }
